@@ -1,16 +1,10 @@
-<tal:block define="global edit_metadata options/edit_metadata|nothing" />
-
-<tal:block condition="not: edit_metadata">
-  <tal:block define="doc here/getContent;
-    rendered_main python: doc.render(proxy=here, cluster='metadata');">
-    <metal:block use-macro="here/cpsdocument_view/macros/view" />
-  </tal:block>
-</tal:block>
-<tal:block condition="edit_metadata">
-  <tal:block define="rendered_main options/rendered_main;
-                     portal_status_message options/portal_status_message;
-                     metadata python:1;
+<tal:block define="
+    rendered_main python:here.cpsdocument_edit_render(request=request,
+                                                      cluster='metadata');
+    form_action string:cpsdocument_metadata_edit;
+    creation python:False;
+    edition python:True;
+    metadata python:True;
     ">
-    <metal:block use-macro="here/cpsdocument_edit_form/macros/edit_form" />
-  </tal:block>
+  <metal:block use-macro="here/cpsdocument_edit_form/macros/edit_form" />
 </tal:block>
