@@ -13,8 +13,11 @@
   </metal:block>
 
   <metal:block fill-slot="main">
-    <tal:block tal:content="structure rendered_main|python:doc.render(proxy=here)" />
-
+    <div tal:define="cluster options/cluster|nothing"
+         tal:replace="structure
+             rendered_main | python:doc.render(proxy=here, cluster=cluster)">
+      RENDERED_MAIN
+    </div>
     <tal:block tal:condition="python:hasattr(here,'portal_discussion') and
       hasattr(here.portal_discussion, 'isCommentingAllowedFor')">
       <tal:block tal:define="comments_allowed
